--- a/themes/css/main.css
+++ b/themes/css/main.css
@@ -155,7 +155,7 @@ iframe{
 	border-radius: 4px;
 }
 #top-bar .user-menu {
-	margin: 0;
+	margin-left: 10px;
 	padding: 0;
 	list-style: none;
 }
@@ -169,6 +169,7 @@ iframe{
 #top-bar .user-menu li:last-child{
 	border-right:0;
 }
+
 /* footer 
 ----------------------------------------------------------------------------- */
 section#footer-bar,
@@ -416,16 +417,17 @@ section.navbar{
 	padding-bottom:15px;
 	position: relative;
 	background-color:#f8f8f8;
-	border-radius: 4px;
+	border-radius: 40px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-bottom:1px solid #eee;
+	margin-left: auto;
 }
 .product-box span.sale_tag {
 	background: url(../images/sprites.png) no-repeat scroll 0 0 transparent;
 	height: 54px;
 	position: absolute;
-	width: 55px;
+	width: 5px;
 	z-index: 100;
 	top:0;
 	left:0;
@@ -775,4 +777,20 @@ section.our_client .row{
 	.feature_box .service{	
 		border-bottom:1px solid #eee;
 	}
+}
+
+address{
+	margin: auto;
+}
+
+.sobre-nosotros{
+	text-align: center;
+	padding-top: 30px;
+}
+.sobre-nosotros-p{
+	text-align: justify;
+	margin: auto;
+	padding: 20px;
+	line-height: 20px;
+	font-size: 17px;
 }
